src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Marketing_Identified_Country__c</fullName>
        <label>Marketing Identified Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire Saint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Revenue__c</fullName>
        <label>Monthly Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>My_Team__c</fullName>
        <description>Allows reporting based on manager not just the role hierarchy</description>
        <formula>OR(
Owner.Manager.Id = $User.Id,
OwnerId  = $User.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRR__c</fullName>
        <formula>Same_Store_ARR__c /  Starting_Price_Opp__c</formula>
        <label>NRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NS_Issues__c</fullName>
        <inlineHelpText>If Errors were found on the invoice - please give us details to ensure we are improving the accuracy of the NS integration.</inlineHelpText>
        <label>NS Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NetSuite_ID__c</fullName>
        <description>Set by the integration with NetSuite</description>
        <externalId>true</externalId>
        <inlineHelpText>Set by the integration with NetSuite</inlineHelpText>
        <label>NetSuite ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_Credit_rollup__c</fullName>
        <label>New Business Credit</label>
        <summarizedField>OpportunityLineItem.New_Business_Credit__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Sales_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Sales Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Sales_Opportunity</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>notEqual</operation>
                <value>Closed Won, Closed Lost, Consolidated</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Development</relationshipLabel>
        <relationshipName>SalesDevelopment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>News_ABAlert__c</fullName>
        <label>News - ABAlert</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>News_CMAlert__c</fullName>
        <label>News CMAlert</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>News_HFAlert__c</fullName>
        <label>News HFAlert</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>News_Product_Description__c</fullName>
        <label>News REAlert</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>News_Products2__c</fullName>
        <label>News Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>News_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>News Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Outreach_Date__c</fullName>
        <label>Next Outreach Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Year_Increase__c</fullName>
        <label>Next Year % Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Paperwork__c</fullName>
        <description>To track when clients are papered on non-standard agreements</description>
        <label>Non-Standard Paperwork?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client’s Paper</fullName>
                </value>
                <value>
                    <fullName>React Only Terms</fullName>
                </value>
                <value>
                    <fullName>Non-Contracted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Marketing_Lead_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OCR Marketing Lead Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age__c</fullName>
        <description>How long is/was this deal open (SS2-Close)</description>
        <formula>IF(IsClosed,(CloseDate - DATEVALUE(CreatedDate)),
TODAY() - DATEVALUE(CreatedDate))</formula>
        <label>Opportunity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>contract in place, but has a period of time in which there is limited financial liability to exit the agreement early.</description>
        <label>Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Invoice_Frequency__c</fullName>
        <inlineHelpText>Please specify the payment terms if &quot;Other&quot; is selected</inlineHelpText>
        <label>Other Billing Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Vendors__c</fullName>
        <label>Other Vendors?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Vendorsnew__c</fullName>
        <formula>IF ( INCLUDES ( Account.Other_Vendors__c , &quot;None&quot; ), &quot;None; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Axiometrics&quot; ), &quot;Axiometrics; &quot;,null ) &amp; 
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;BAML&quot; ), &quot;BAML; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Bloomberg&quot; ), &quot;Bloomberg; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Broker Provided Information&quot; ), &quot;Broker Provided Information; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Burgiss&quot; ), &quot;Burgiss; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Capital One&quot; ), &quot;Capital One; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;CBRE&quot; ), &quot;CBRE; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Citi&quot; ), &quot;Citi; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;CompStak&quot; ), &quot;CompStak; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;CoStar&quot; ), &quot;CoStar; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Datscha&quot; ), &quot;Datscha; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Estates Gazette&quot; ), &quot;Estates Gazette; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;FERI&quot; ), &quot;FERI; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;GeoPhy&quot; ), &quot;GeoPhy; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;ISI&quot; ), &quot;ISI; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Jefferies&quot; ), &quot;Jefferies; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;JPM&quot; ), &quot;JPM; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Kempen&quot; ), &quot;Kempen; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Keybanc&quot; ), &quot;Keybanc; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Kroll Bond Rating&quot; ), &quot;Kroll Bond Rating; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Moody&apos;s&quot; ), &quot;Moody&apos;s; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Morgan Stanley&quot; ), &quot;Morgan Stanley; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Other&quot; ), &quot;Other; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;PMA&quot; ), &quot;PMA; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;PropertyEU&quot; ), &quot;PropertyEU; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Property Week&quot; ), &quot;Property Week; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;RCA&quot; ), &quot;RCA; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;REIS&quot; ), &quot;REIS; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;Trepp&quot; ), &quot;Trepp; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;UBS&quot; ), &quot;UBS; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Other_Vendors__c , &quot;I don&apos;t know&quot; ), &quot;I don&apos;t know&quot;,null )</formula>
        <label>Other Vendors</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_for_Query__c</fullName>
        <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner for Query</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <description>Use to track Advisory Revenue and project status</description>
        <label>Percent Complete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pipeline_Category_Sort__c</fullName>
        <formula>IF(DATE(YEAR(CloseDate),MONTH(CloseDate),1) &lt; DATE(YEAR(TODAY()),MONTH(TODAY()),1),00,

IF(
OR(
DATE(YEAR(CloseDate),MONTH(CloseDate),1) = DATE(YEAR(TODAY()),MONTH(TODAY()),1),
DATE(YEAR(CloseDate),MONTH(CloseDate),1) = DATE(YEAR(TODAY()),MONTH(TODAY())+1,1),
DATE(YEAR(CloseDate),MONTH(CloseDate),1) = DATE(YEAR(TODAY()),MONTH(TODAY())+2,1)),

CASE(MONTH(CloseDate),
1,01,
2,02,
3,03,
4,04,
5,05,
6,06,
7,07,
8,08,
9,09,
10,10,
11,11,
12,12,
null),

IF(YEAR(CloseDate) &gt; YEAR(TODAY()),14,

IF(MONTH(CloseDate)+YEAR(CloseDate) &gt; MONTH(TODAY()+2)+YEAR(TODAY()),13,

NULL))))</formula>
        <label>Pipeline Category Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_Category__c</fullName>
        <formula>IF(DATE(YEAR(CloseDate),MONTH(CloseDate),1) &lt; DATE(YEAR(TODAY()),MONTH(TODAY()),1),&quot;Outdated&quot;,

IF(
OR(
DATE(YEAR(CloseDate),MONTH(CloseDate),1) = DATE(YEAR(TODAY()),MONTH(TODAY()),1),
DATE(YEAR(CloseDate),MONTH(CloseDate),1) = DATE(YEAR(TODAY()),MONTH(TODAY())+1,1),
DATE(YEAR(CloseDate),MONTH(CloseDate),1) = DATE(YEAR(TODAY()),MONTH(TODAY())+2,1)),

CASE(MONTH(CloseDate),
1,&quot;January &quot;,
2,&quot;February &quot;,
3,&quot;March &quot;,
4,&quot;April &quot;,
5,&quot;May &quot;,
6,&quot;June &quot;,
7,&quot;July &quot;,
8,&quot;August &quot;,
9,&quot;September &quot;,
10,&quot;October &quot;,
11,&quot;Novermber &quot;,
12,&quot;December &quot;,
null)+TEXT(YEAR(CloseDate)),

IF(YEAR(CloseDate) &gt; YEAR(TODAY()),&quot;Next Year&quot;,

IF(MONTH(CloseDate)+YEAR(CloseDate) &gt; MONTH(TODAY()+2)+YEAR(TODAY()),&quot;Balance of Year&quot;,

NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Score__c</fullName>
        <label>Previous Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <color>#009900</color>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <color>#33CC00</color>
                    <label>B</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <color>#57F17C</color>
                    <label>C</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <color>#F3D904</color>
                    <label>D</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <color>#FF6666</color>
                    <label>F</label>
                </value>
                <value>
                    <fullName>ErrorInput</fullName>
                    <label>Error Input</label>
                </value>
                <value>
                    <fullName>ErrorAdmin</fullName>
                    <label>Error Admin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Stage__c</fullName>
        <defaultValue>&apos;SS2&apos;</defaultValue>
        <label>Previous Stage</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>Text(Account.Priority__c)</formula>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <inlineHelpText>Counts # of Opportunity Products added to support validation rule.</inlineHelpText>
        <label>Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Description_NS__c</fullName>
        <label>Product Description NS</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Types__c</fullName>
        <label>Product Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Research &amp; News</fullName>
                </value>
                <value>
                    <fullName>LDC</fullName>
                </value>
                <value>
                    <fullName>React</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>News</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_Associated__c</fullName>
        <label>Products Associated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <description>Update all Products from associated to Product object</description>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Since__c</fullName>
        <description>Prospect Since date from import OR Opportunity Created Date from Salesforce if blank</description>
        <label>Prospect Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualified_Date__c</fullName>
        <inlineHelpText>Populates when the opportunity stage is moved to disqualified or qualified</inlineHelpText>
        <label>Qualified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Qualified_Team__c</fullName>
        <inlineHelpText>Team name of the opportunity owner when moved to converted state.</inlineHelpText>
        <label>Qualified Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hewett Research</fullName>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>UK Sales</fullName>
                </value>
                <value>
                    <fullName>US News</fullName>
                </value>
                <value>
                    <fullName>US Research</fullName>
                </value>
                <value>
                    <fullName>EU SDR Inbound</fullName>
                </value>
                <value>
                    <fullName>US SDR Inbound</fullName>
                </value>
                <value>
                    <fullName>SDR Outbound</fullName>
                </value>
                <value>
                    <fullName>Head of SDR&apos;s</fullName>
                </value>
                <value>
                    <fullName>React News</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questions_Comments__c</fullName>
        <label>Questions &amp; Comments</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quota_Amount__c</fullName>
        <formula>IF( TEXT( Type_Sales_or_Quota__c)=&quot;Quota&quot;,Amount,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quota Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>React_Status__c</fullName>
        <label>React Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Deciding</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Agreed</fullName>
                </value>
                <value>
                    <fullName>Finalizing</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>React_id__c</fullName>
        <externalId>true</externalId>
        <label>React id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Real_Estate_Capital_Markets_Public__c</fullName>
        <label>Real Estate Capital Markets/Public</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_For_No_Renewal__c</fullName>
        <label>Reason For No Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>Stub Period</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Mid-multi year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_for_Query__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type for Query</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Revenue_Advisory__c</fullName>
        <label>Recurring Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Revenue_Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Revenue Snapshot</label>
        <referenceTo>Recurring_Revenue_Snapshot__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <label>Referral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Internal Referral Source</inlineHelpText>
        <label>AM Referred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_Role__c</fullName>
        <formula>Referred_By__r.UserRole.Name</formula>
        <label>Referred by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Credit__c</fullName>
        <label>Renewal Credit</label>
        <summarizedField>OpportunityLineItem.Renewal_Credit__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <formula>CASE(MONTH( Contract_Start_Date__c ), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Risk__c</fullName>
        <label>Renewal Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Difficult Renewal / BBFTD</fullName>
                </value>
                <value>
                    <fullName>Consistently Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Known Change in Business Model</fullName>
                </value>
                <value>
                    <fullName>Power User / VIP left the Firm</fullName>
                </value>
                <value>
                    <fullName>Usage Decreased by +30% YoY</fullName>
                    <label>YoY Usage Decrease &gt; 30%</label>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Year_Temp__c</fullName>
        <formula>TEXT(YEAR(Contract_Start_Date__c)+((Current_Contract_Year__c - 1) * 12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Year Temp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Year__c</fullName>
        <formula>TEXT(YEAR((ADDMONTHS(Contract_Start_Date__c,((Current_Contract_Year__c - 1) * 12)))))</formula>
        <label>Renewal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Forecast_Category__c</fullName>
        <inlineHelpText>Please be sure to update opportunity close dates appropriately.</inlineHelpText>
        <label>Rep Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repeat_Client__c</fullName>
        <label>Repeat Client</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Increase__c</fullName>
        <label>Required Increase</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Research_Products2__c</fullName>
        <label>Research Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Research_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Research_Users__c</fullName>
        <description># of proposed users receiving our research</description>
        <inlineHelpText># of proposed users receiving our research</inlineHelpText>
        <label>Research Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revisit_Date__c</fullName>
        <label>Revisit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Reason__c</fullName>
        <label>Risk Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Type__c</fullName>
        <label>Risk Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                    <label>Downsell</label>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Full Attrition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAO_Date__c</fullName>
        <label>SAO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Most_Recent_Cadence_Name__c</fullName>
        <description>Most recent SalesLoft Cadence of Primary Contact associated with Opportunity.</description>
        <label>Most Recent Cadence - Cadence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Most_Recent_Last_Completed_Step__c</fullName>
        <description>Number of most recently completed SalesLoft Cadence step logged against the Opportunity&apos;s Primary Contact.</description>
        <label>Most Recent Cadence - Last Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Contact Associated with Opportunity.</description>
        <label>SalesLoft Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Primary Contact</relationshipLabel>
        <relationshipName>Opportunity_Primary_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Amount__c</fullName>
        <formula>IF( TEXT(Type_Sales_or_Quota__c) =&quot;Sales&quot;,Amount,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Cycle__c</fullName>
        <formula>Days_at_SS3__c + Days_at_SS4__c + Days_at_SS5__c + Days_at_SS6__c</formula>
        <label>Sales Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewals</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>